[package]
name = "canva-connect"
version = "0.1.0"
edition = "2021"
authors = ["Triss Healy <triss.healy@canva.com>", "Amp AI Assistant <amp@sourcegraph.com>"]
description = "A Rust client library for the Canva Connect API. Most code is AI-generated with Amp by Sourcegraph."
license = "MIT OR Apache-2.0"
repository = "https://github.com/trissylegs/canva-connect-rust"
homepage = "https://github.com/trissylegs/canva-connect-rust"
documentation = "https://docs.rs/canva-connect"
keywords = ["canva", "api", "client", "design", "graphics"]
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
url = "2.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
sha2 = "0.10"
rand = "0.8"
async-trait = "0.1"
futures = "0.3"
governor = "0.6"
nonzero_ext = "0.3"
urlencoding = "2.1"
dotenv = "0.15"

# OAuth flow example dependencies (optional)
hyper = { version = "0.14", features = ["full"], optional = true }
webbrowser = { version = "0.8", optional = true }

# Observability dependencies (optional)
opentelemetry = { version = "0.21", optional = true }
opentelemetry_sdk = { version = "0.21", optional = true, features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", optional = true }
tracing = { version = "0.1", optional = true }
tracing-opentelemetry = { version = "0.22", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }
reqwest-tracing = { version = "0.4", optional = true, features = ["opentelemetry_0_21"] }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
env_logger = "0.10"
log = "0.4"
serde_test = "1.0"
docmatic = "0.1"

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
observability = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "tracing", "tracing-opentelemetry", "tracing-subscriber"]
oauth-flow = ["hyper", "webbrowser"]

[[example]]
name = "asset_upload"
path = "examples/asset_upload.rs"

[[example]]
name = "observability"
path = "examples/observability.rs"

[[example]]
name = "url_asset_upload"
path = "examples/url_asset_upload.rs"

[[example]]
name = "autofill"
path = "examples/autofill.rs"

[[example]]
name = "brand_templates"
path = "examples/brand_templates.rs"

[[example]]
name = "comments"
path = "examples/comments.rs"

[[example]]
name = "exports"
path = "examples/exports.rs"

[[example]]
name = "oauth_flow"
path = "examples/oauth_flow.rs"
required-features = ["oauth-flow"]
